# PyPFT

./: .gitignore  CHANGELOG.md  LICENSE  README.md  open_cache_dir.py  pyproject.toml  tasks.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release-notes.yml  release.yml  update-release-metadata.yml  version-changelog.yml
benchmarks/: README.md
docs/: api.rst  architecture.rst  conf.py  conventions.rst  developer.rst  gpu-backend.rst  index.rst  quickstart.rst
docs/source/: api.rst  conf.py  index.rst
notebooks/: README.md
requirements/: dev.txt  runtime.txt
scripts/: backfill_dist.py  install_dev.py  install_env.py  release.py  sync_dependencies.py  update_release_metadata.py
src/PyPFT/: __init__.py  tranform.py
src/PyPFT/DHT_impls/: __init__.py  naive.py  parallel.py
src/PyPFT/utils/: __init__.py  polar.py
src/pypft/: __init__.py  __main__.py  api.py  bessel_mat_handler.py  config.py  open_cache_dir.py  release_metadata.py  run_tests.py
src/pypft/DHT_impls/: naive.py  parallel.py
src/pypft/backends/: __init__.py  base.py  cpu.py  gpu.py
src/pypft/bessel_mat_impls/: sym_vect.py  symmetric.py
src/pypft/cli/: __init__.py  __main__.py  app.py
src/pypft/cli/commands/: __init__.py  transform.py
src/pypft/core/: __init__.py  conventions.py  exceptions.py  typing.py  validation.py
src/pypft/dft/: __init__.py  angular.py
src/pypft/dht/: __init__.py  base.py  mock_mirror.py  naive.py  registry.py
src/pypft/fields/: __init__.py  base.py  polar.py
src/pypft/grids/: __init__.py  polar.py
src/pypft/idft/: __init__.py  angular.py
src/pypft/io/: __init__.py  artifacts.py  manifest.py  metadata.py  npy.py
src/pypft/operators/: __init__.py  angular.py  pft.py  plans.py  radial.py
src/pypft/tracing/: __init__.py  collector.py  models.py  protocol.py  replay.py
src/pypft/utils/: coordinates.py  visualization.py
src/pypft/validation/: __init__.py  cases.py
src/pypft/visualization/: __init__.py  _matplotlib_helpers.py  arrays.py  comparison.py  matplotlib_backend.py  models.py  renderers.py  trace.py
src/pypft/workflows/: __init__.py  requests.py  results.py  transform.py  validation.py  visualize.py
src/pypft10/: __main__.py  test_data.npy
src/pypft10/DHT_impls/: arrayprogramming.py
src/pypft10/bessel_mat_impls/: __init__.py  naive.py  sym_vect_par.py
tests/: conftest.py  test_artifact_replay.py  test_backends.py  test_backfill_dist.py  test_bessel_mat.py  test_dependency_sync.py  test_dht_naive.py  test_dht_registry.py  test_docs_workflow.py  test_fft_stages.py  test_grids.py  test_install_env.py  test_invoke_tasks.py  test_metadata_io.py  test_operator_plans.py  test_public_api.py  test_release_metadata.py  test_release_update.py  test_release_workflow.py  test_tracing.py  test_transformation.py  test_update_release_metadata_workflow.py  test_validation.py  test_validation_workflows.py  test_visualization.py  test_workflows.py
tests/cli/: test_app.py  test_transform_cli.py  test_validate_cli.py  test_visualize_cli.py
tests/fields/: __init__.py  test_polar_fields.py
