[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pypft"
version = "0.0.5"
authors = [
  {name="Hossein Ghasem Damghani", email="hghdamghani@gmail.com"},
]
description = "Polar Fourier Transform for Reconstruction of Polar MR images"
keywords = ["PFT", "Polar MRI", "MRI", "Hankel Transform"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.1",
    "matplotlib>=2.0",
    "joblib>=1.5",
    "opencv-python>=4.12",
    "platformdirs>=4.4",
    "scipy>=1.16",
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Operating System :: OS Independent',
]
license = "MIT"
license-files = ["LICENCSE"]

[project.urls]
Homepage = "https://github.com/GhDamghani/PyPFT"
Issues = "https://github.com/GhDamghani/PyPFT/issues"

[tool.coverage.run]
source = ["src/pypft"]

[tool.semantic_release]
version_toml = [
  "pyproject.toml:project.version"
]
branch = "main"
tag_format = "v{version}"
build_command = "python -m build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = false
commit_parser = "conventional"
major_on_zero = true
allow_zero_version = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"