[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPFT"
version = "0.1.0"
description = "Polar Fourier transform toolkit with a modular PyPFT facade."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "GhDamghani" },
]
keywords = ["polar-fourier-transform", "scientific-computing", "mri", "fourier", "hankel-transform"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "matplotlib>=3.11.0",
  "numba>=0.65.1",
  "numpy>=2.4.6",
  "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/GhDamghani/PyPFT"
Documentation = "https://github.com/GhDamghani/PyPFT"
Issues = "https://github.com/GhDamghani/PyPFT/issues"
Source = "https://github.com/GhDamghani/PyPFT"

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "sphinx>=9.1.0",
]
